--- a/Hangman/Hangman/Base.lproj/Main.storyboard
+++ b/Hangman/Hangman/Base.lproj/Main.storyboard
@@ -174,6 +174,7 @@
                         <outlet property="HumanWordLabel" destination="H73-4H-gcn" id="PNg-ff-Wot"/>
                         <outlet property="addItemView" destination="32K-pl-uZg" id="USW-Ud-3lJ"/>
                         <outlet property="aiPanelView" destination="gCg-iy-Op2" id="XJh-Lq-kd7"/>
+                        <outlet property="gamStatusLabel" destination="1uk-oj-iW0" id="Eg4-ln-mct"/>
                         <outlet property="gameStateView" destination="U6L-Pt-OMX" id="XU8-xc-fjO"/>
                         <outlet property="humanPanelView" destination="kK5-b9-rCR" id="Nn3-OO-Bko"/>
                         <outlet property="optionItemView" destination="2Tx-d5-j0f" id="7Z1-dn-n5m"/>
@@ -239,83 +240,67 @@
                     <rect key="frame" x="0.0" y="0.0" width="339" height="301"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uD9-e4-fFh" customClass="roundButton" customModule="Hangman" customModuleProvider="target">
-                            <rect key="frame" x="39" y="166" width="100" height="100"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <inset key="titleEdgeInsets" minX="0.0" minY="18" maxX="22" maxY="0.0"/>
-                            <inset key="imageEdgeInsets" minX="37" minY="-2" maxX="0.0" maxY="35"/>
-                            <state key="normal" image="Restart">
-                                <attributedString key="attributedTitle">
-                                    <fragment content="Retry">
-                                        <attributes>
-                                            <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <font key="NSFont" metaFont="system" size="18"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
-                            </state>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="number" keyPath="cornorRadius">
-                                    <real key="value" value="50"/>
-                                </userDefinedRuntimeAttribute>
-                                <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                    <real key="value" value="4"/>
-                                </userDefinedRuntimeAttribute>
-                                <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                                    <color key="value" red="0.98874266389999999" green="0.97314832169999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </userDefinedRuntimeAttribute>
-                            </userDefinedRuntimeAttributes>
-                            <connections>
-                                <action selector="restartFromPopUpClicked:" destination="3vp-U5-UDV" eventType="touchUpInside" id="NaT-is-Mv7"/>
-                            </connections>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HtI-TR-mYE" customClass="roundButton" customModule="Hangman" customModuleProvider="target">
-                            <rect key="frame" x="192" y="166" width="100" height="100"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <inset key="titleEdgeInsets" minX="0.0" minY="21" maxX="25" maxY="0.0"/>
-                            <inset key="imageEdgeInsets" minX="32" minY="-2" maxX="0.0" maxY="34"/>
-                            <state key="normal" image="quit">
-                                <attributedString key="attributedTitle">
-                                    <fragment content="quit">
-                                        <attributes>
-                                            <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <font key="NSFont" size="24" name=".AppleSystemUIFont"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
-                            </state>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="number" keyPath="cornorRadius">
-                                    <real key="value" value="50"/>
-                                </userDefinedRuntimeAttribute>
-                                <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                    <real key="value" value="4"/>
-                                </userDefinedRuntimeAttribute>
-                                <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                                    <color key="value" red="1" green="0.94981395850000006" blue="0.97314610000000001" alpha="1" colorSpace="calibratedRGB"/>
-                                </userDefinedRuntimeAttribute>
-                            </userDefinedRuntimeAttributes>
-                            <connections>
-                                <action selector="quitFromPopUpClicked:" destination="3vp-U5-UDV" eventType="touchUpInside" id="6mC-p3-6w9"/>
-                                <action selector="restartFromPopUpClicked:" destination="3vp-U5-UDV" eventType="touchUpInside" id="QdS-eN-n3V"/>
-                            </connections>
-                        </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="AI word was:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rTT-G2-mgz">
-                            <rect key="frame" x="16" y="117" width="314" height="24"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                            <color key="textColor" red="0.89752538069999999" green="0.13726070339999999" blue="0.096442374910000003" alpha="0.64193600169999998" colorSpace="custom" customColorSpace="sRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Human word was:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H73-4H-gcn">
-                            <rect key="frame" x="16" y="85" width="307" height="24"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                            <color key="textColor" red="0.8975253807106599" green="0.13726070340888322" blue="0.096442374911696716" alpha="0.64193600171232879" colorSpace="custom" customColorSpace="sRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="090-AQ-6b4">
+                            <rect key="frame" x="20" y="20" width="269" height="147"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1uk-oj-iW0">
+                                    <rect key="frame" x="100" y="0.0" width="69" height="24"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                    <color key="textColor" red="0.89752538069999999" green="0.13726070339999999" blue="0.096442374910000003" alpha="0.64193600169999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AI word was:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rTT-G2-mgz">
+                                    <rect key="frame" x="73.5" y="24" width="122.5" height="24"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                    <color key="textColor" red="0.89752538069999999" green="0.13726070339999999" blue="0.096442374910000003" alpha="0.64193600169999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Human word was:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H73-4H-gcn">
+                                    <rect key="frame" x="49" y="48" width="171.5" height="24"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                    <color key="textColor" red="0.8975253807106599" green="0.13726070340888322" blue="0.096442374911696716" alpha="0.64193600171232879" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wj3-cR-hgH">
+                                    <rect key="frame" x="63" y="72" width="143" height="75"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uD9-e4-fFh">
+                                            <rect key="frame" x="0.0" y="0.0" width="80" height="75"/>
+                                            <state key="normal" image="Restart">
+                                                <attributedString key="attributedTitle">
+                                                    <fragment content="restart">
+                                                        <attributes>
+                                                            <font key="NSFont" metaFont="system" size="18"/>
+                                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                        </attributes>
+                                                    </fragment>
+                                                </attributedString>
+                                            </state>
+                                            <connections>
+                                                <action selector="restartFromPopUpClicked:" destination="3vp-U5-UDV" eventType="touchUpInside" id="NaT-is-Mv7"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HtI-TR-mYE">
+                                            <rect key="frame" x="80" y="0.0" width="63" height="75"/>
+                                            <state key="normal" image="quit">
+                                                <attributedString key="attributedTitle">
+                                                    <fragment content="quit">
+                                                        <attributes>
+                                                            <font key="NSFont" metaFont="system" size="18"/>
+                                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                        </attributes>
+                                                    </fragment>
+                                                </attributedString>
+                                            </state>
+                                            <connections>
+                                                <action selector="quitFromPopUpClicked:" destination="3vp-U5-UDV" eventType="touchUpInside" id="6mC-p3-6w9"/>
+                                                <action selector="restartFromPopUpClicked:" destination="3vp-U5-UDV" eventType="touchUpInside" id="QdS-eN-n3V"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                </stackView>
+                            </subviews>
+                        </stackView>
                     </subviews>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
